--- a/src/main/resources/assets/atlasmaruzen/lang/en_us.json
+++ b/src/main/resources/assets/atlasmaruzen/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.atlasmaruzen.aluminium": "Aluminium",
   "item.atlasmaruzen.bauxite": "Bauxite",
+  "item.atlasmaruzen.alumina": "Alumina",
 
   "block.atlasmaruzen.aluminium_block": "Block of Aluminium",
   "block.atlasmaruzen.bauxite_ore": "Bauxite Ore",
